[package]
name = "tiny-template"
version = "0.1.0"
edition = "2021"



[dependencies]
#ntcall = { git = "https://github.com/riesha/ntcall-rs"}

[dependencies.winapi]
version = "0.3.9"
features = ["processthreadsapi","heapapi","winuser","synchapi","libloaderapi","handleapi","consoleapi","wincon","memoryapi"]

[dependencies.iced-x86]
version = "1.18.0"
default-features = false
features = ["no_std", "decoder", "masm","code_asm"]


[profile.dev]
panic = "abort"

[profile.release]
strip = true  
opt-level = "z"  
lto = true
codegen-units = 1
panic = "abort"