[package]
name = "tiny-template"
version = "0.1.0"
edition = "2021"





[dependencies.winapi]
version = "0.3.9"
features = ["processthreadsapi","heapapi","winuser","synchapi","libloaderapi","handleapi","consoleapi","wincon","memoryapi"]


[profile.dev]
panic = "abort"

[profile.release]
strip = true  
opt-level = "z"  
lto = true
codegen-units = 1
panic = "abort"